--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation.html
@@ -90,7 +90,7 @@
     <!--/* View More Facet Items */-->
     <div data-sly-test="${ data.facetItems.length > data.config.facetItemsMinVisible }"
       class="faceted-navigation__view-more-facets">
-      <button id="view-more-facets" class="button--reset" >${ 'View more' @ i18n }</button>
+      <button id="view-more-facets" class="button--reset" ><strong>${ 'View more' @ i18n }</strong> </button>
     </div>
     <div class="mobile-done hidden-lg hidden-md">
       <a href="#" target="_self">Done</a>
