--- a/eaton.frontend/src/global/css/utils/_utils.scss
+++ b/eaton.frontend/src/global/css/utils/_utils.scss
@@ -2,6 +2,16 @@
 //--------------
 .u-is-fixed { position: fixed; }
 
+.overlay-mask{
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  opacity:.8;
+  background-color: #fff;
+  z-index:9998;
+}
+
 .u-absolute-fill {
   position: absolute;
   left: 0;
