--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -168,6 +168,8 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .u-is-fixed { position: fixed; }
 
+.overlay-mask { position: absolute; top: 0; left: 0; width: 100%; opacity: .8; background-color: #fff; z-index: 9998; }
+
 .u-absolute-fill { position: absolute; left: 0; top: 0; width: 100%; height: 100%; }
 
 .u-is-center-aligned { position: absolute; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
