fixing styling issues

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -293,82 +293,6 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .dark-theme .rich-text-container ul li::before { background-color: #FFF; }
 
-.icon::before { -moz-osx-font-smoothing: grayscale; -webkit-font-smoothing: antialiased; -webkit-box-sizing: border-box; box-sizing: border-box; display: inline-block; font-family: "eaton-glyphicon"; font-smoothing: antialiased; font-style: normal; font-variant: normal; font-weight: normal; line-height: 1; text-decoration: inherit; text-rendering: optimizeLegibility; text-transform: none; }
-
-.icon-badge::before { content: "\EA01"; }
-
-.icon-book::before { content: "\EA02"; }
-
-.icon-bulb::before { content: "\EA03"; }
-
-.icon-calendar::before { content: "\EA04"; }
-
-.icon-chevron-down::before { content: "\EA05"; }
-
-.icon-chevron-left::before { content: "\EA06"; }
-
-.icon-chevron-right::before { content: "\EA07"; }
-
-.icon-close::before { content: "\EA08"; }
-
-.icon-doc-badge::before { content: "\EA09"; }
-
-.icon-doc-download::before { content: "\EA0A"; }
-
-.icon-doc-text::before { content: "\EA0B"; }
-
-.icon-download::before { content: "\EA0C"; }
-
-.icon-globe::before { content: "\EA0D"; }
-
-.icon-hamburger::before { content: "\EA0E"; }
-
-.icon-headset::before { content: "\EA0F"; }
-
-.icon-help::before { content: "\EA10"; }
-
-.icon-info::before { content: "\EA11"; }
-
-.icon-link-external::before { content: "\EA12"; }
-
-.icon-list-checkmark::before { content: "\EA13"; }
-
-.icon-list-items::before { content: "\EA14"; }
-
-.icon-checklist::before { content: "\EA15"; }
-
-.icon-marker::before { content: "\EA16"; }
-
-.icon-phone::before { content: "\EA17"; }
-
-.icon-plane::before { content: "\EA18"; }
-
-.icon-player-pause::before { content: "\EA19"; }
-
-.icon-player-play::before { content: "\EA1A"; }
-
-.icon-quote-dark::before { content: "\EA1B"; }
-
-.icon-quote-light::before { content: "\EA1C"; }
-
-.icon-search-minus::before { content: "\EA1D"; }
-
-.icon-search-plus::before { content: "\EA1E"; }
-
-.icon-search::before { content: "\EA1F"; }
-
-.icon-shopping-cart::before { content: "\EA20"; }
-
-.icon-sign-minus::before { content: "\EA21"; }
-
-.icon-sign-plus::before { content: "\EA22"; }
-
-.icon-tiles::before { content: "\EA23"; }
-
-.icon-tree::before { content: "\EA24"; }
-
-.icon-user::before { content: "\EA25"; }
-
 .faceted-navigation-header { margin-bottom: 28px; }
 
 .faceted-navigation-header__header-top, .faceted-navigation-header__header-bottom, .faceted-navigation-header__active-filters, .faceted-navigation-header__filter-link { display: -webkit-box; display: -ms-flexbox; display: flex; }
@@ -385,7 +309,13 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .faceted-navigation-header__filter-link .icon { font-size: 10px; margin-right: 1rem; }
 
-.faceted-navigation__mobile-facet-container { display: none; position: absolute; top: 0; left: 0; }
+.faceted-navigation__mobile-facet-container { position: absolute; top: 0; left: 0; z-index: 9999; background-color: #fff; }
+
+.faceted-navigation__mobile-facet-container .b-button { width: 100%; text-align: center; }
+
+.faceted-navigation .hidden { display: none; }
+
+.faceted-navigation .visibile { display: block; }
 
 .faceted-navigation__group { border-bottom: 1px solid #e6e6e6; }
 
@@ -495,7 +425,13 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .faceted-navigation-header__filter-link .icon { font-size: 10px; margin-right: 1rem; }
 
-.faceted-navigation__mobile-facet-container { display: none; position: absolute; top: 0; left: 0; }
+.faceted-navigation__mobile-facet-container { position: absolute; top: 0; left: 0; z-index: 9999; background-color: #fff; }
+
+.faceted-navigation__mobile-facet-container .b-button { width: 100%; text-align: center; }
+
+.faceted-navigation .hidden { display: none; }
+
+.faceted-navigation .visibile { display: block; }
 
 .faceted-navigation__group { border-bottom: 1px solid #e6e6e6; }
 
@@ -694,82 +630,6 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
   .eaton-product-tabs label .icon { font-size: 4rem; }
   .eaton-product-tabs label span { font-size: 1.4rem; }
   .eaton-product-tabs--fixed .eaton-product-tabs__buttons { top: 84px; margin-left: -15px; margin-right: -15px; } }
-
-.icon::before { -moz-osx-font-smoothing: grayscale; -webkit-font-smoothing: antialiased; -webkit-box-sizing: border-box; box-sizing: border-box; display: inline-block; font-family: "eaton-glyphicon"; font-smoothing: antialiased; font-style: normal; font-variant: normal; font-weight: normal; line-height: 1; text-decoration: inherit; text-rendering: optimizeLegibility; text-transform: none; }
-
-.icon-badge::before { content: "\EA01"; }
-
-.icon-book::before { content: "\EA02"; }
-
-.icon-bulb::before { content: "\EA03"; }
-
-.icon-calendar::before { content: "\EA04"; }
-
-.icon-chevron-down::before { content: "\EA05"; }
-
-.icon-chevron-left::before { content: "\EA06"; }
-
-.icon-chevron-right::before { content: "\EA07"; }
-
-.icon-close::before { content: "\EA08"; }
-
-.icon-doc-badge::before { content: "\EA09"; }
-
-.icon-doc-download::before { content: "\EA0A"; }
-
-.icon-doc-text::before { content: "\EA0B"; }
-
-.icon-download::before { content: "\EA0C"; }
-
-.icon-globe::before { content: "\EA0D"; }
-
-.icon-hamburger::before { content: "\EA0E"; }
-
-.icon-headset::before { content: "\EA0F"; }
-
-.icon-help::before { content: "\EA10"; }
-
-.icon-info::before { content: "\EA11"; }
-
-.icon-link-external::before { content: "\EA12"; }
-
-.icon-list-checkmark::before { content: "\EA13"; }
-
-.icon-list-items::before { content: "\EA14"; }
-
-.icon-checklist::before { content: "\EA15"; }
-
-.icon-marker::before { content: "\EA16"; }
-
-.icon-phone::before { content: "\EA17"; }
-
-.icon-plane::before { content: "\EA18"; }
-
-.icon-player-pause::before { content: "\EA19"; }
-
-.icon-player-play::before { content: "\EA1A"; }
-
-.icon-quote-dark::before { content: "\EA1B"; }
-
-.icon-quote-light::before { content: "\EA1C"; }
-
-.icon-search-minus::before { content: "\EA1D"; }
-
-.icon-search-plus::before { content: "\EA1E"; }
-
-.icon-search::before { content: "\EA1F"; }
-
-.icon-shopping-cart::before { content: "\EA20"; }
-
-.icon-sign-minus::before { content: "\EA21"; }
-
-.icon-sign-plus::before { content: "\EA22"; }
-
-.icon-tiles::before { content: "\EA23"; }
-
-.icon-tree::before { content: "\EA24"; }
-
-.icon-user::before { content: "\EA25"; }
 
 .icon::before { -moz-osx-font-smoothing: grayscale; -webkit-font-smoothing: antialiased; -webkit-box-sizing: border-box; box-sizing: border-box; display: inline-block; font-family: "eaton-glyphicon"; font-smoothing: antialiased; font-style: normal; font-variant: normal; font-weight: normal; line-height: 1; text-decoration: inherit; text-rendering: optimizeLegibility; text-transform: none; }
 
