--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-product-tabs/css/module-product-tabs.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-product-tabs/css/module-product-tabs.css
@@ -22,13 +22,9 @@
 
 .dark-theme .eaton-product-tabs input[id="tab-2"]:target ~ .row label[for="tab-2"], .dark-theme .eaton-product-tabs input[id="tab-2"]:target ~ .container label[for="tab-2"], .dark-theme .eaton-product-tabs input[id="tab-2"]:checked ~ .row label[for="tab-2"], .dark-theme .eaton-product-tabs input[id="tab-2"]:checked ~ .container label[for="tab-2"], .eaton-product-tabs.dark-theme input[id="tab-2"]:target ~ .row label[for="tab-2"], .eaton-product-tabs.dark-theme input[id="tab-2"]:target ~ .container label[for="tab-2"], .eaton-product-tabs.dark-theme input[id="tab-2"]:checked ~ .row label[for="tab-2"], .eaton-product-tabs.dark-theme input[id="tab-2"]:checked ~ .container label[for="tab-2"] { background-color: #5B6770; }
 
-.eaton-product-tabs { background-color: #F8F8F8; }
-
-.dark-theme .eaton-product-tabs, .eaton-product-tabs.dark-theme { background-color: #333F48; }
-
 .dark-theme .eaton-product-tabs__buttons, .eaton-product-tabs.dark-theme__buttons { background-color: #333F48; }
 
-.dark-theme .eaton-product-tabs__tab-panel, .eaton-product-tabs.dark-theme__tab-panel { color: #FFF; }
+.dark-theme .eaton-product-tabs__buttons::before, .eaton-product-tabs.dark-theme__buttons::before { background-color: #333F48; }
 
 .dark-theme .eaton-product-tabs label:hover, .dark-theme .eaton-product-tabs label:focus, .dark-theme .eaton-product-tabs label:active, .dark-theme .eaton-product-tabs label.tab-active, .eaton-product-tabs.dark-theme label:hover, .eaton-product-tabs.dark-theme label:focus, .eaton-product-tabs.dark-theme label:active, .eaton-product-tabs.dark-theme label.tab-active { background-color: #5B6770; }
 
@@ -36,7 +32,9 @@
 
 .dark-theme .eaton-product-tabs__description .b-eyebrow-small, .dark-theme .eaton-product-tabs__description .icon, .dark-theme .eaton-product-tabs__description .b-heading-h5, .eaton-product-tabs.dark-theme__description .b-eyebrow-small, .eaton-product-tabs.dark-theme__description .icon, .eaton-product-tabs.dark-theme__description .b-heading-h5 { color: #FFF; }
 
-.eaton-product-tabs__buttons { background-color: #F8F8F8; }
+.eaton-product-tabs__buttons { background-color: #F8F8F8; position: relative; }
+
+.eaton-product-tabs__buttons::before { content: ''; background-color: #F8F8F8; position: absolute; height: 100%; width: 200%; display: block; left: -50%; }
 
 .eaton-product-tabs--fixed .eaton-product-tabs__tab-panel { padding-top: 390px; }
 
