--- a/eaton.frontend/src/components/product-specifications/css/product-specifications.scss
+++ b/eaton.frontend/src/components/product-specifications/css/product-specifications.scss
@@ -29,5 +29,9 @@
   //-----------------------------------
   @include media-desktop-and-up {
     padding: 40px 0;
+
+    .module-anchor-links {
+      margin-right: 20px;
+    }
   }
 }
