--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-specifications/css/product-specifications.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-specifications/css/product-specifications.css
@@ -2,4 +2,5 @@
 
 @media screen and (max-width: 991px) { .product-specifications .module-anchor-links { display: none; } }
 
-@media screen and (min-width: 992px) { .product-specifications { padding: 40px 0; } }
+@media screen and (min-width: 992px) { .product-specifications { padding: 40px 0; }
+  .product-specifications .module-anchor-links { margin-right: 20px; } }
