--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/view-vertical.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/view-vertical.html
@@ -15,16 +15,16 @@
           aria-label="Go to ${ item.title }"
           class="eaton-link-list-vertical__list-link"
           target="${ item.external_link ? '_blank' : '_self' }"
-                data-sly-attribute.download="${item.document_download}">
+          data-sly-attribute.download="${ item.document_download}">
           <span class="eaton-link-list-vertical__list-text">
-              <i data-sly-test="${item.external_link}" class="eaton-link-list-vertical__external-icon icon icon-link-external" aria-hidden="true"></i>
-              <i data-sly-test="${item.document_download != ''}" class="eaton-link-list-vertical__external-icon icon icon-download" aria-hidden="true"></i>
-              ${ item.title }
+            <i data-sly-test="${item.external_link}" class="eaton-link-list-vertical__external-icon icon icon-link-external" aria-hidden="true"></i>
+            <i data-sly-test="${ item.document_download }" class="eaton-link-list-vertical__external-icon icon icon-download" aria-hidden="true"></i>
+            ${ item.title }
           </span>
-          <i data-sly-test="${item.document_download == ''}" class="eaton-link-list-vertical__list-icon icon icon-chevron-right"
-            aria-hidden="true"></i>
+          <i data-sly-test="${ !item.document_download }" class="eaton-link-list-vertical__list-icon icon icon-chevron-right" aria-hidden="true"></i>
         </a>
-        <div class="eaton-link-list-vertical__download-text" data-sly-test="${item.document_download != ''}">
+        <div class="eaton-link-list-vertical__download-text"
+          data-sly-test="${ item.document_download }">
             <p>(${item.document_size})</p>
             <p class="eaton-link-list-vertical__download-text--description">${item.document_description}</p>
         </div>
