[LinkList] "Arrow-Right" icon should be displayed only when used over dark-themes (eg: Header & Footer)

--- a/eaton.frontend/src/components/link-list/css/views/_view-vertical.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-vertical.scss
@@ -48,6 +48,10 @@
   //--------------
   .dark-theme & {
 
+    .icon-chevron-right {
+      display: inline-block;
+    }
+
     &__eyebrow,
     &__list-link {
       color: $color__white;
