[M-45] Fix Lint Errors

--- a/eaton.frontend/src/shared/module-table/css/module-table.scss
+++ b/eaton.frontend/src/shared/module-table/css/module-table.scss
@@ -19,7 +19,7 @@
   }
 
   &__body {
-
+    // Empty selector for future reference
   }
 
 
@@ -57,7 +57,7 @@
 
     margin-bottom: $spacing__md;
 
-    &__head {
+    &__head {
       margin-bottom: 48px;
     }
 
