--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/partials/styleguide-typography.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/partials/styleguide-typography.html
@@ -47,7 +47,7 @@
 
 
     <br /><br />
-    <h3 class="b-heading-h5">BodyCopy <small> / Additional Styles</small></h3>
+    <h3 class="b-heading-h5">BodyCopy <small> / and other text Styles</small></h3>
     <ul>
       <li>Body - <strong>Base font-size:</strong> <code> ?? (TBD)</code></li>
       <li>Body - <strong>Base font-family:</strong> <code>Arial</code></li>
@@ -55,9 +55,9 @@
       <li>Body - <strong>Base line-height:</strong> <code>1.5</code></li>
     </ul>
     <hr />
-    <p class="b-body-copy"><strong>Example:</strong> <code>body-copy</code> Power Management Company Eaton has upgraded its wiring accessories offering for residential and commercial buildings with the launch of a switched socket with USB ports. The PREMERA and COPA 2-gang switched sockets have two USB ports to provide a convenient and safe charging solution for tablets, mobile phones and other electronic devices. </p>
+    <p class="b-body-copy"><strong>Example:</strong> <code>body-copy</code> Power Management Company Eaton has upgraded its wiring accessories offering for residential and commercial buildings with the launch of a switched socket with USB ports. The <strong>PREMERA and COPA 2-gang</strong> switched sockets have two USB ports to provide a convenient and safe charging solution for tablets, mobile phones and other electronic devices. <a href="#">This is a Link element.</a> <em>This sentence uses italic font.</em></p>
     <hr />
-    <p class="b-body-copy-small"><strong>Example:</strong> <code>body-copy-small</code> Power Management Company Eaton has upgraded its wiring accessories offering for residential and commercial buildings with the launch of a switched socket with USB ports. The PREMERA and COPA 2-gang switched sockets have two USB ports to provide a convenient and safe charging solution for tablets, mobile phones and other electronic devices. </p>
+    <p class="b-body-copy-small"><strong>Example:</strong> <code>body-copy-small</code> Power Management Company Eaton has upgraded its wiring accessories offering for residential and commercial buildings with the launch of a switched socket with USB ports. The <strong>PREMERA and COPA 2-gang</strong> switched sockets have two USB ports to provide a convenient and safe charging solution for tablets, mobile phones and other electronic devices. <a href="#">This is a Link element.</a> <em>This sentence uses italic font.</em></p>
     <hr />
 
     <table class="sg-table b-body-copy-small">
