--- a/eaton.frontend/src/components/search-box/css/views/_view-inline.scss
+++ b/eaton.frontend/src/components/search-box/css/views/_view-inline.scss
@@ -2,12 +2,13 @@
 // SearchBox Component: Inline View
 //-----------------------------------
 
-.eaton-search-inline {
-  &__headline {
+.eaton-search--inline {
+  &__header {
     text-transform: uppercase;
-    margin-bottom: $spacing__sm;
   }
 
+  &__header,
+  &__subheader,
   &__form {
     margin-bottom: $spacing__sm;
   }
@@ -40,7 +41,7 @@
   }
 
   .dark-theme & {
-    &__headline {
+    &__header {
       color: $color__white;
     }
   }
