--- a/eaton.frontend/src/components/header/css/header.scss
+++ b/eaton.frontend/src/components/header/css/header.scss
@@ -151,4 +151,10 @@
       display: block !important;
     }
   }
+
+  // stylelint-disable declaration-no-important
+  .header-search {
+    transform: translateY(0)!important;
+    transition: none !important;
+  }
 }
