added the live chat and share this icon

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -74,6 +74,10 @@
 
 .icon-user::before { content: "\EA25"; }
 
+.icon-livechat::before { content: "\EA26"; }
+
+.icon-share::before { content: "\EA27"; }
+
 @media screen and (max-width: 991px) { .container { padding: 0 30px; } }
 
 @font-face { font-family: 'Eaton'; src: url("fonts/EatonRegular.woff") format("woff"); }
