--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-product-tabs/css/module-product-tabs.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-product-tabs/css/module-product-tabs.css
@@ -101,3 +101,5 @@
   .eaton-product-tabs label .icon { font-size: 4rem; }
   .eaton-product-tabs label span { font-size: 1.4rem; }
   .eaton-product-tabs--fixed .eaton-product-tabs__buttons { top: 84px; margin-left: -15px; margin-right: -15px; } }
+
+.aem-AuthorLayer-Edit .eaton-product-tabs__tab-panel, .cq-wcm-edit .eaton-product-tabs__tab-panel { display: block; }
