--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-tabs.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-tabs.html
@@ -15,12 +15,23 @@
         </li>
 
         <sly data-sly-list.tab="${ data.items }">
-          <li data-sly-test="!${ tab.isHiddenTab }"
+          <li data-sly-test="${ !tab.isHiddenTab }"
             class="module-tabs__list-item ${ tab.activeTab ? 'module-tabs__list-item--active' : '' }">
-            <a href="${ tab.url }"
+
+            <!--/* If TAB Is enabled - Behave as a link */-->
+            <a data-sly-test="${ !tab.isADisabledTab }"
+              href="${ tab.url }"
               target="${ tab.target }"
               aria-label="${ 'Go to {0}' @ i18n, format=[ tab.label ] }"
-              class="module-tabs__list-link">${ '{0} ({1})' @ format=[tab.label, tab.resultsCount] }</a>
+              class="module-tabs__list-link"
+            >${ '{0} ({1})' @ format=[tab.label, tab.resultsCount] }</a>
+
+            <!--/* If TAB is disabled: Render only text */-->
+            <div
+              data-sly-test="${ tab.isADisabledTab }"
+              class="module-tabs__list-link"
+            >${ '{0} ({1})' @ format=[tab.label, tab.resultsCount] }
+            </div>
           </li>
         </sly>
 
