bug fixes for back to search / live chat / share buttons

--- a/eaton.frontend/src/components/live-chat-cta/css/live-chat-cta.scss
+++ b/eaton.frontend/src/components/live-chat-cta/css/live-chat-cta.scss
@@ -21,4 +21,13 @@
   a {
     color: $color__primary-gray2;
   }
+
+  @include media-mobile-and-tablet {
+    margin: 15px;
+
+    i {
+      font-size: 2rem;
+      margin-top: -8px;
+    }
+  }
 }
