--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-product-tab.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-product-tab.html
@@ -28,7 +28,7 @@
           </div>
         </div>
 
-        <div class="col-md-5">
+        <div class="col-md-5 eaton-product-tabs__buttons__center">
           <div class="row">
             <!-- graphicToggle without <a> -->
             <sly data-sly-test="${ data.graphicToggle }" >
@@ -54,7 +54,7 @@
           </div>
         </div>
 
-        <div class="col-md-3 u-text-center">
+        <div class="col-md-3 u-text-center eaton-product-tabs__dropdown-container">
           <button class="eaton-product-tabs__dropdown button--reset">
             ${data.dropdown.label}
             <i class="icon icon-chevron-down" aria-hidden="true"></i>
@@ -71,7 +71,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row eaton-product-tabs__page-utility">
         <sly data-sly-resource="${'back-to-search' @ resourceType='/apps/eaton/static-components/product/back-to-search'}"></sly>
         <sly data-sly-resource="${'share-cta' @ resourceType='/apps/eaton/static-components/product/share-cta'}"></sly>
         <sly data-sly-resource="${'live-chat' @ resourceType='/apps/eaton/static-components/product/live-chat-cta'}"></sly>
